generated the json files.